--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+}
+.container{
+	border:1px solid lightcyan;
+	margin:15px;
+	padding:0 10px 0px 10px;
+	
+	background-color:white;
+}
+
+.author{
+	text-align:right;
+}
